src/objects/API_Setting__mdt.object
<CustomObject>
    <description>Custom Metadata for API</description>
    <fields>
        <fullName>API_Endpoint__c</fullName>
        <label>API_Endpoint</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_Key__c</fullName>
        <description>Key value of API</description>
        <label>API_Key</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_Name__c</fullName>
        <description>Name of API</description>
        <inlineHelpText>Name of API</inlineHelpText>
        <label>API_Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>API_Setting</label>
    <pluralLabel>API_Settings</pluralLabel>
</CustomObject>